update length and caal, with more correct input_n_method; create r script for iphc length and age comps

--- a/Rcode/nwfscSurvey_vignette.Rmd
+++ b/Rcode/nwfscSurvey_vignette.Rmd
@@ -102,9 +102,12 @@ plot_index(
 # Use raw length comps, you can tell this is what was used in the previous assessment because whole numbers are used
 raw_length_comps <- get_raw_comps(
     data = bio,
+    input_n_method = c("tows"),
     comp_bins = seq(10, 74, 2),
     comp_column_name = "length_cm",
     dir = getwd(),
+    fleet = 11,
+    month = 7, 
     printfolder = "",
     two_sex_comps = FALSE) #single sex model
 
@@ -147,6 +150,9 @@ raw_age_comps <- get_raw_comps(
     data = bio,
     comp_bins = 0:65,
     comp_column_name = "age",
+    fleet = 11,
+    age_error = 2,
+    month = 7,
     dir = getwd(),
     printfolder = "", 
     two_sex_comps = FALSE) #single sex model
@@ -171,14 +177,36 @@ file.rename(from = file.path(getwd(), paste0("NWFSC.Combo_", age_files[2])),
 
 ### Conditional age-at-length data
 ```{r, warning = FALSE, message = FALSE}
-caal <- SurveyAgeAtLen.fn(
-  datAL = bio, 
-  datTows = catch,
-  strat.df = WCGBTS_strata,
-  lgthBins = seq(10, 74, 2), 
-  ageBins = 0:65,
+# The previous function used was actually deprecated and this function should have been used.
+caal <- get_raw_caal(
+  dat = bio, 
+  len_bins = seq(10, 74, 2), 
+  age_bins = 0:65,
   dir = file.path(dirname(getwd()), "Data", "NWFSC.Combo_CAAL"),
   printfolder = "")
+
+# Reformat data to only have one sex
+one_sex_caal <- caal |>
+  dplyr::arrange(year, Lbin_lo) |>
+  tidyr::pivot_longer(cols = f0:m65, names_to = "age", values_to = "count") |>
+  dplyr::mutate(input_n = case_when(
+    grepl("m", age) ~ 0,
+    grepl("f", age) ~ input_n
+  )) |>
+  mutate(age = as.numeric(stringr::str_remove_all(age, "f|m"))) |>
+  dplyr::group_by(year, Lbin_lo, age) |>
+  dplyr::summarize(month = unique(month),
+                   fleet = 11,
+                   sex = 0,
+                   partition = unique(partition),
+                   ageerr = 2,
+                   Lbin_hi = unique(Lbin_hi),
+                   Nsamp = sum(input_n),
+                   count = sum(count)) |>
+  dplyr::select(year, month, fleet, sex, partition, ageerr, Lbin_lo, Lbin_hi, Nsamp, age, count) |>
+  tidyr::pivot_wider(names_from = "age", values_from = "count")
+
+write.csv(one_sex_caal, file = file.path(dirname(getwd()), "Data", "NWFSC.Combo_CAAL", "processed_one_sex_caal.csv"), row.names = FALSE)
 
 PlotMap.fn(
   dat = catch)
@@ -313,6 +341,9 @@ plot_index(
 
 raw_length_compsT <- get_raw_comps(
     data = bioT,
+    input_n_method = c("tows"),
+    month = 7,
+    fleet = 10,
     comp_bins = seq(10, 74, 2),
     comp_column_name = "length_cm",
     dir = getwd(),
