--- a/Rcode/survey_length_age/nwfscSurvey_vignette.Rmd
+++ b/Rcode/survey_length_age/nwfscSurvey_vignette.Rmd
@@ -59,13 +59,13 @@ WCGBTS_strata <- CreateStrataDF.fn(
 biomass = get_design_based(
   data = catch,  
   strata = WCGBTS_strata,
-  dir = file.path(dirname(getwd()), "Data", "NWFSC.Combo_and_Tri_design_based_indices"),
+  dir = file.path(dirname(dirname(getwd())), "Data", "NWFSC.Combo_and_Tri_design_based_indices"),
   printfolder = "")
 ```
 
 ```{r, echo = FALSE, message = FALSE, warning = FALSE}
-file.rename(from = file.path(dirname(getwd()), "Data", "NWFSC.Combo_and_Tri_design_based_indices","design_based_indices.csv"), 
-            to = file.path(dirname(getwd()), "Data", "NWFSC.Combo_and_Tri_design_based_indices", "NWFSC.Combo_design_based_indices.csv"))
+file.rename(from = file.path(dirname(dirname(getwd())), "Data", "NWFSC.Combo_and_Tri_design_based_indices","design_based_indices.csv"), 
+            to = file.path(dirname(dirname(getwd())), "Data", "NWFSC.Combo_and_Tri_design_based_indices", "NWFSC.Combo_design_based_indices.csv"))
 ```
 
 Plot coastwide
@@ -123,12 +123,12 @@ length_files <- list.files(path = getwd(), pattern = "length_cm")
 file.rename(from = length_files[1],
             to = paste0("NWFSC.Combo_", length_files[1]))
 file.rename(from = file.path(getwd(), paste0("NWFSC.Combo_", length_files[1])),
-            to = file.path(dirname(getwd()), "Data", "processed", "NWFSC.Combo_and_Tri_length_comps", paste0("NWFSC.Combo_", length_files[1])))
+            to = file.path(dirname(dirname(getwd())), "Data", "processed", "NWFSC.Combo_and_Tri_length_comps", paste0("NWFSC.Combo_", length_files[1])))
 
 file.rename(from = length_files[2],
             to = paste0("NWFSC.Combo_", length_files[2]))
 file.rename(from = file.path(getwd(), paste0("NWFSC.Combo_", length_files[2])),
-            to = file.path(dirname(getwd()), "Data", "processed", "NWFSC.Combo_and_Tri_length_comps", paste0("NWFSC.Combo_", length_files[2])))
+            to = file.path(dirname(dirname(getwd())), "Data", "processed", "NWFSC.Combo_and_Tri_length_comps", paste0("NWFSC.Combo_", length_files[2])))
 ```
 
 ### Marginal age composition data
@@ -153,7 +153,7 @@ raw_age_comps <- get_raw_comps(
     input_n_method = "stewart_hamel",
     comp_column_name = "age",
     fleet = 11,
-    age_error = 2,
+    ageerr = 2,
     month = 7,
     dir = getwd(),
     printfolder = "", 
@@ -169,12 +169,12 @@ age_files <- list.files(path = getwd(), pattern = "age_")
 file.rename(from = age_files[1],
             to = paste0("NWFSC.Combo_", age_files[1]))
 file.rename(from = file.path(getwd(), paste0("NWFSC.Combo_", age_files[1])), 
-            to = file.path(dirname(getwd()), "Data", "processed", "NWFSC.Combo_age_comps", paste0("NWFSC.Combo_", age_files[1])))
+            to = file.path(dirname(dirname(getwd())), "Data", "processed", "NWFSC.Combo_age_comps", paste0("NWFSC.Combo_", age_files[1])))
 
 file.rename(from = age_files[2],
             to = paste0("NWFSC.Combo_", age_files[2]))
 file.rename(from = file.path(getwd(), paste0("NWFSC.Combo_", age_files[2])), 
-          to = file.path(dirname(getwd()), "Data", "processed", "NWFSC.Combo_age_comps", paste0("NWFSC.Combo_", age_files[2])))
+          to = file.path(dirname(dirname(getwd())), "Data", "processed", "NWFSC.Combo_age_comps", paste0("NWFSC.Combo_", age_files[2])))
 ```
 
 ### Conditional age-at-length data
@@ -184,7 +184,7 @@ caal <- get_raw_caal(
   dat = bio, 
   len_bins = seq(10, 74, 2), 
   age_bins = 0:65,
-  dir = file.path(dirname(getwd()), "Data", "processed", NWFSC.Combo_CAAL"),
+  dir = file.path(dirname(dirname(getwd())), "Data", "processed", NWFSC.Combo_CAAL"),
   printfolder = "")
 
 # Reformat data to only have one sex
@@ -208,7 +208,7 @@ one_sex_caal <- caal |>
   dplyr::select(year, month, fleet, sex, partition, ageerr, Lbin_lo, Lbin_hi, Nsamp, age, count) |>
   tidyr::pivot_wider(names_from = "age", values_from = "count")
 
-write.csv(one_sex_caal, file = file.path(dirname(getwd()), "Data", "processed", "NWFSC.Combo_CAAL", "processed_one_sex_caal.csv"), row.names = FALSE)
+write.csv(one_sex_caal, file = file.path(dirname(dirname(getwd())), "Data", "processed", "NWFSC.Combo_CAAL", "processed_one_sex_caal.csv"), row.names = FALSE)
 
 PlotMap.fn(
   dat = catch)
@@ -228,7 +228,7 @@ wt_len_est
 
 plot_weight_length(
   bio,
-  dir = getwd(),
+  dir = file.path(dirname(getwd()), "model_params"),
   estimates = wt_len_est,
   col_length = "length_cm",
   col_weight = "weight_kg",
@@ -249,8 +249,8 @@ if(dir.exists(file.path(getwd(),"NWFSC.Combo_plots"))){
                 to = file.path(getwd(), "NWFSC.Combo_plots", plots[x]))
   })
 } else {
-  file.rename(from = file.path(dirname(getwd()), "Rcode", "plots"), 
-            to = file.path(dirname(getwd()), "Rcode", "NWFSC.Combo_plots"))
+  file.rename(from = file.path(getwd(), "plots"), 
+            to = file.path(getwd(), "NWFSC.Combo_plots"))
 }
 ```
 
@@ -301,13 +301,13 @@ Triennial_strata = CreateStrataDF.fn(names=c("OR", "WA"),
 biomassT = get_design_based(
   data = catchT,  
   strata = Triennial_strata,
-  dir = file.path(dirname(getwd()), "Data", "NWFSC.Combo_and_Tri_design_based_indices"),
+  dir = file.path(dirname(dirname(getwd())), "Data", "NWFSC.Combo_and_Tri_design_based_indices"),
   printfolder = "")
 ```
 
 ```{r, echo = FALSE, message = FALSE, warning = FALSE}
-file.rename(from = file.path(dirname(getwd()), "Data", "NWFSC.Combo_and_Tri_design_based_indices","design_based_indices.csv"), 
-            to = file.path(dirname(getwd()), "Data", "NWFSC.Combo_and_Tri_design_based_indices", "Tri_design_based_indices.csv"))
+file.rename(from = file.path(dirname(dirname(getwd())), "Data", "NWFSC.Combo_and_Tri_design_based_indices","design_based_indices.csv"), 
+            to = file.path(dirname(dirname(getwd())), "Data", "NWFSC.Combo_and_Tri_design_based_indices", "Tri_design_based_indices.csv"))
 ```
 
 Plot coastwide
@@ -362,12 +362,12 @@ length_files <- list.files(path = getwd(), pattern = "length_cm")
 file.rename(from = length_files[1],
             to = paste0("Tri_", length_files[1]))
 file.rename(from = file.path(getwd(), paste0("Tri_", length_files[1])),
-            to = file.path(dirname(getwd()), "Data", "processed", "NWFSC.Combo_and_Tri_length_comps", paste0("Tri_", length_files[1])))
+            to = file.path(dirname(dirname(getwd())), "Data", "processed", "NWFSC.Combo_and_Tri_length_comps", paste0("Tri_", length_files[1])))
 
 file.rename(from = length_files[2],
             to = paste0("Tri_", length_files[2]))
 file.rename(from = file.path(getwd(), paste0("Tri_", length_files[2])),
-            to = file.path(dirname(getwd()), "Data", "processed", "NWFSC.Combo_and_Tri_length_comps", paste0("Tri_", length_files[2])))
+            to = file.path(dirname(dirname(getwd())), "Data", "processed", "NWFSC.Combo_and_Tri_length_comps", paste0("Tri_", length_files[2])))
 ```
 
 ### No marginal age composition data for triennial survey
@@ -417,15 +417,15 @@ if(dir.exists(file.path(getwd(),"Tri_plots"))){
                 to = file.path(getwd(), "Tri_plots", plots[x]))
   })
 } else {
-  file.rename(from = file.path(dirname(getwd()), "Rcode", "plots"), 
-            to = file.path(dirname(getwd()), "Rcode", "Tri_plots"))
+  file.rename(from = file.path(getwd(), "plots"), 
+            to = file.path(getwd(), "Tri_plots"))
 }
 ```
 
 ## WCGOP Fisheries Discards
 ```{r, warning = FALSE, message = FALSE, }
 gemm_data <- pull_gemm("yelloweye rockfish", 
-                       dir = file.path(dirname(getwd()), "Data", "processed"), 
+                       dir = file.path(dirname(dirname(getwd())), "Data", "processed"), 
                        verbose = TRUE)
 
 head(gemm_data, n = 20)
