--- a/Rcode/survey_length_age/nwfscSurvey_vignette.Rmd
+++ b/Rcode/survey_length_age/nwfscSurvey_vignette.Rmd
@@ -103,14 +103,14 @@ plot_index(
 # The steward-hamel method is used to get the Nsamps, this is better than the simplified stewart-hamel approach used in the 2017 assessment and is fine to use in this years update according to the instructors.
 raw_length_comps <- get_raw_comps(
     data = bio,
-    input_n_method = c("stewart_hamel"),
     comp_bins = seq(10, 74, 2),
     comp_column_name = "length_cm",
-    dir = getwd(),
+    input_n_method = c("stewart_hamel"),
+    two_sex_comps = FALSE,
     fleet = 11,
     month = 7, 
-    printfolder = "",
-    two_sex_comps = FALSE) #single sex model
+    dir = getwd(),
+    printfolder = "") #single sex model
 
 plot_comps(
   data = raw_length_comps
@@ -184,7 +184,7 @@ caal <- get_raw_caal(
   dat = bio, 
   len_bins = seq(10, 74, 2), 
   age_bins = 0:65,
-  dir = file.path(dirname(dirname(getwd())), "Data", "processed", NWFSC.Combo_CAAL"),
+  dir = file.path(dirname(dirname(getwd())), "Data", "processed", "NWFSC.Combo_CAAL"),
   printfolder = "")
 
 # Reformat data to only have one sex
@@ -425,7 +425,7 @@ if(dir.exists(file.path(getwd(),"Tri_plots"))){
 ## WCGOP Fisheries Discards
 ```{r, warning = FALSE, message = FALSE, }
 gemm_data <- pull_gemm("yelloweye rockfish", 
-                       dir = file.path(dirname(dirname(getwd())), "Data", "processed"), 
+                       dir = file.path(dirname(dirname(getwd())), "Data", "raw"), 
                        verbose = TRUE)
 
 head(gemm_data, n = 20)
